fix: resolve search alignment (#1106)

--- a/blocks/browse/da-search/da-search.css
+++ b/blocks/browse/da-search/da-search.css
@@ -4,7 +4,6 @@
   gap: 6px;
   position: relative;
   top: 1px;
-  left: 4px;
 }
 
 form {
